--- a/140_basic_code.ipynb
+++ b/140_basic_code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPsEGY1ZjpmEL0CPaeYYftE",
+      "authorship_tag": "ABX9TyOjO/H65zrDH2SWqESnJgZn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -457,7 +457,7 @@
       ],
       "metadata": {
         "id": "u7Cijlba3wgG",
-        "outputId": "cec0e2e4-7d96-4b57-9329-4c18b01199c3",
+        "outputId": "a79a685e-f8d2-41c4-f549-7fe353dd12bc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -471,6 +471,83 @@
             "After swapping:\n",
             "a = 10\n",
             "b = 5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "11.Write a Python Program to Check if a Number is Positive, Negative or Zero"
+      ],
+      "metadata": {
+        "id": "ZXuJGlBnuTBu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = float(input(\"Enter a number: \"))\n",
+        "if num > 0:\n",
+        " print(\"Positive number\")\n",
+        "elif num == 0:\n",
+        " print(\"Zero\")\n",
+        "else:\n",
+        " print(\"Negative number\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FrzQMI25uYpk",
+        "outputId": "a61fe676-bd6a-491e-b3c9-019ebedd442c"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 5\n",
+            "Positive number\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "12. write a python Program to check if a number is odd or even."
+      ],
+      "metadata": {
+        "id": "h9UK3bdDungT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = int(input(\"Enter a number:\"))\n",
+        "\n",
+        "if num%2 == 0:\n",
+        "  print(\"this is even number\")\n",
+        "else:\n",
+        "  print(\"This is odd number.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IBdApuSPuyeb",
+        "outputId": "844aa5e3-38da-4c4e-ec7b-e427ffde6d05"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number:11\n",
+            "This is odd number.\n"
           ]
         }
       ]
