--- a/140_basic_code.ipynb
+++ b/140_basic_code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOjO/H65zrDH2SWqESnJgZn",
+      "authorship_tag": "ABX9TyN/7+r8mt6ZyN9OotFQAiyE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -502,7 +502,7 @@
         "id": "FrzQMI25uYpk",
         "outputId": "a61fe676-bd6a-491e-b3c9-019ebedd442c"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -540,7 +540,7 @@
         "id": "IBdApuSPuyeb",
         "outputId": "844aa5e3-38da-4c4e-ec7b-e427ffde6d05"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -548,6 +548,50 @@
           "text": [
             "Enter a number:11\n",
             "This is odd number.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "13. Write a python program to check leap year"
+      ],
+      "metadata": {
+        "id": "wbb7GybkYORu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "year = int(input(\"Enter the year\"))\n",
+        "\n",
+        "\n",
+        "\n",
+        "if (year % 400 ==0)and(year % 100 == 0):\n",
+        "  print(\"{0} is a leap year\".format(year))\n",
+        "\n",
+        "elif(year % 4 == 0) and (year % 100 !=0):\n",
+        "  print(\"{0} is a leap year\".format(year))\n",
+        "\n",
+        "else:\n",
+        "  print(\"{0} is not a leap year\".format(year))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qD5LrWe5ZO6f",
+        "outputId": "31ebdedb-bd13-4c9c-ec0a-811187d7e326"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the year2024\n",
+            "2024 is a leap year\n"
           ]
         }
       ]
