prime mumber added

--- a/140_basic_code.ipynb
+++ b/140_basic_code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN/7+r8mt6ZyN9OotFQAiyE",
+      "authorship_tag": "ABX9TyP0G+Nf8DRWSI5be+L2tgpX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -584,7 +584,7 @@
         "id": "qD5LrWe5ZO6f",
         "outputId": "31ebdedb-bd13-4c9c-ec0a-811187d7e326"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -592,6 +592,68 @@
           "text": [
             "Enter the year2024\n",
             "2024 is a leap year\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "14.Write a Python Program to Check Prime Number.\n",
+        "\n",
+        "\n",
+        "\n",
+        "Prime Numbers:\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "A prime number is a whole number that cannot be evenly divided by any other number\n",
+        "except for 1 and itself. For example, 2, 3, 5, 7, 11, and 13 are prime numbers because they\n",
+        "cannot be divided by any other positive integer except for 1 and their own value."
+      ],
+      "metadata": {
+        "id": "D1nhf0qRxRFA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = int(input())\n",
+        "\n",
+        "flag = False\n",
+        "\n",
+        "\n",
+        "if num ==1:\n",
+        "  print(f\"{num},is not prime number\")\n",
+        "\n",
+        "elif num > 1:\n",
+        "\n",
+        "  for i in range(2,num):\n",
+        "    if (num % i) ==0:\n",
+        "      flage = True\n",
+        "      break\n",
+        "\n",
+        "if flag:\n",
+        "  print(f\"{num}, is not a prime number\")\n",
+        "else:\n",
+        "  print(f\"{num},is a prime number\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AWQdUUK5xfRl",
+        "outputId": "d6396b90-c457-4887-ef6f-3596a868af10"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "27\n",
+            "27,is a prime number\n"
           ]
         }
       ]
