--- a/140_basic_code.ipynb
+++ b/140_basic_code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP0G+Nf8DRWSI5be+L2tgpX",
+      "authorship_tag": "ABX9TyNGZEyRbrBQb4DDt5d3XwCY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -646,7 +646,7 @@
         "id": "AWQdUUK5xfRl",
         "outputId": "d6396b90-c457-4887-ef6f-3596a868af10"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -654,6 +654,96 @@
           "text": [
             "27\n",
             "27,is a prime number\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "15. Write a python program to print all prime numbers in an interval of 1- 10.\n"
+      ],
+      "metadata": {
+        "id": "3x7bLtVXVnBB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lower =1\n",
+        "upper = 10\n",
+        "\n",
+        "print(\"Prime numbers between\",lower,\"and\",upper,\"are:\")\n",
+        "\n",
+        "for num in range(lower,upper+1):\n",
+        "  # all prime numbers are greater than 1\n",
+        "  if num > 1:\n",
+        "      for i in range(2,num):\n",
+        "        if(num % i) == 0:\n",
+        "             break\n",
+        "      else:\n",
+        "        print(num)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uR-WsqMmVz7k",
+        "outputId": "95e45cde-2742-4bbc-a193-ab6febcdb15f"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Prime numbers between 1 and 10 are:\n",
+            "2\n",
+            "3\n",
+            "5\n",
+            "7\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "16. Write a python program to find the factorial of a number."
+      ],
+      "metadata": {
+        "id": "o2llb2IjYEfo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = int(input(\"Enter a number:\"))\n",
+        "factorial = 1\n",
+        "if num<0:\n",
+        "    print(\"factorial does not\")\n",
+        "elif num ==0:\n",
+        "  print(\"Factorial of 0 is 1\")\n",
+        "else:\n",
+        "  for i in range(1,num+1):\n",
+        "    factorial = factorial*i\n",
+        "  print(f'The factorial of {num} is {factorial}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UaIFBzxiYPzu",
+        "outputId": "4bb12a12-f04e-4bc0-d082-9f1b94a4994e"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number:4\n",
+            "The factorial of 4 is 24\n"
           ]
         }
       ]
