--- a/140_basic_code.ipynb
+++ b/140_basic_code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNGZEyRbrBQb4DDt5d3XwCY",
+      "authorship_tag": "ABX9TyOlsflssBuN1ZPBRjOH1i14",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -691,7 +691,7 @@
         "id": "uR-WsqMmVz7k",
         "outputId": "95e45cde-2742-4bbc-a193-ab6febcdb15f"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -736,7 +736,7 @@
         "id": "UaIFBzxiYPzu",
         "outputId": "4bb12a12-f04e-4bc0-d082-9f1b94a4994e"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -744,6 +744,51 @@
           "text": [
             "Enter a number:4\n",
             "The factorial of 4 is 24\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "17. Write a python to Display the multiplication Table."
+      ],
+      "metadata": {
+        "id": "Y_tMcedSgQAg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = int(input(\"Display multiplication table of:\"))\n",
+        "\n",
+        "for i in range(1,11):\n",
+        "  print(f\"{num}X{i}={num*i}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9iI_elYXgekB",
+        "outputId": "57467f0d-9e34-401f-98d1-c98d9aac7661"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Display multiplication table of:9\n",
+            "9X1=9\n",
+            "9X2=18\n",
+            "9X3=27\n",
+            "9X4=36\n",
+            "9X5=45\n",
+            "9X6=54\n",
+            "9X7=63\n",
+            "9X8=72\n",
+            "9X9=81\n",
+            "9X10=90\n"
           ]
         }
       ]
