--- a/140_basic_code.ipynb
+++ b/140_basic_code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOlsflssBuN1ZPBRjOH1i14",
+      "authorship_tag": "ABX9TyNKk0zsUM38vXvZXkgrnDhh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -770,7 +770,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9iI_elYXgekB",
-        "outputId": "57467f0d-9e34-401f-98d1-c98d9aac7661"
+        "outputId": "84cc1c5e-a13e-4759-f909-37d496f8d68c"
       },
       "execution_count": 1,
       "outputs": [
@@ -778,17 +778,83 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Display multiplication table of:9\n",
-            "9X1=9\n",
-            "9X2=18\n",
-            "9X3=27\n",
-            "9X4=36\n",
-            "9X5=45\n",
-            "9X6=54\n",
-            "9X7=63\n",
-            "9X8=72\n",
-            "9X9=81\n",
-            "9X10=90\n"
+            "Display multiplication table of:10\n",
+            "10X1=10\n",
+            "10X2=20\n",
+            "10X3=30\n",
+            "10X4=40\n",
+            "10X5=50\n",
+            "10X6=60\n",
+            "10X7=70\n",
+            "10X8=80\n",
+            "10X9=90\n",
+            "10X10=100\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "18. Write a Python Program to Print the Fibonacci sequence.\n",
+        "Fibonacci sequence:\n",
+        "The Fibonacci sequence is a series of numbers where each number is the sum of the two\n",
+        "preceding ones, typically starting with 0 and 1. So, the sequence begins with 0 and 1, and\n",
+        "the next number is obtained by adding the previous two numbers. This pattern continues\n",
+        "indefinitely, generating a sequence that looks like this:\n",
+        "0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, and so on.\n",
+        "Mathematically, the Fibonacci sequence can be defined using the following recurrence\n",
+        "relation:\n",
+        "𝐹(0) = 0 𝐹(1) = 1 𝐹(𝑛) = 𝐹(𝑛 − 1) + 𝐹(𝑛 − 2)𝑓𝑜𝑟𝑛 > 1"
+      ],
+      "metadata": {
+        "id": "sL913FkVpWFU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nterms =int(input(\"How many terms ?\"))\n",
+        "\n",
+        "n1,n2 = 0,1\n",
+        "count = 0\n",
+        "\n",
+        "if nterms <=0:\n",
+        "  print(\"please enter a  +ve integer\")\n",
+        "\n",
+        "elif nterms==1:\n",
+        "  print(\"Fibonacci sequence upto\",nterms,\":\")\n",
+        "  print(n1)\n",
+        "else:\n",
+        "  print(\"Fibonacci sequence:\")\n",
+        "  while count < nterms:\n",
+        "    print(n1)\n",
+        "    nth = n1+n2\n",
+        "\n",
+        "    n1=n2\n",
+        "    n2=nth\n",
+        "    count += 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SlCPwsK6pza-",
+        "outputId": "1e37929d-1237-4d03-b7e6-566bef93cece"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How many terms ?5\n",
+            "Fibonacci sequence:\n",
+            "0\n",
+            "1\n",
+            "1\n",
+            "2\n",
+            "3\n"
           ]
         }
       ]
