--- a/140_basic_code.ipynb
+++ b/140_basic_code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNKk0zsUM38vXvZXkgrnDhh",
+      "authorship_tag": "ABX9TyNOA+eom4juf6YrQIL+6Ti4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -772,7 +772,7 @@
         "id": "9iI_elYXgekB",
         "outputId": "84cc1c5e-a13e-4759-f909-37d496f8d68c"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -842,7 +842,7 @@
         "id": "SlCPwsK6pza-",
         "outputId": "1e37929d-1237-4d03-b7e6-566bef93cece"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -855,6 +855,72 @@
             "1\n",
             "2\n",
             "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "19. Write a python program to check Armstrong number?\n",
+        "\n",
+        "Armstrong Number:\n",
+        "\n",
+        "It is a number that is equal to the sum of its own digits, each raised to a power equal to the\n",
+        "number of digits in the number.\n",
+        "For example, let's consider the number 153:\n",
+        "It has three digits (1, 5, and 3).\n",
+        "If we calculate + , we get , which is equal to .\n",
+        "So, 153 is an Armstrong number because it equals the sum of its digits raised to the power\n",
+        "of the number of digits in the number.\n",
+        "Another example is 9474:\n",
+        "It has four digits (9, 4, 7, and 4).\n",
+        "If we calculate , we get , which is also\n",
+        "equal to .\n",
+        "Therefore, 9474 is an Armstrong number as well.\n",
+        "9 + + +\n",
+        "4"
+      ],
+      "metadata": {
+        "id": "wJzZXnQ5FD7j"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = int(input(\"Enter a number:\"))\n",
+        "\n",
+        "num_str= str(num)\n",
+        "num_digits = len(num_str)\n",
+        "\n",
+        "sum_of_powers = 0\n",
+        "temp_num =num\n",
+        "\n",
+        "while temp_num > 0:\n",
+        "  digit = temp_num % 10\n",
+        "  sum_of_powers += digit ** num_digits\n",
+        "  temp_num //=10\n",
+        "\n",
+        "if sum_of_powers == num:\n",
+        "  print(f\"{num} is an Armstrong number .\")\n",
+        "else:\n",
+        "  print(f\"{num} is not an Armstrong number.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dHD-FK0OGel0",
+        "outputId": "c0161197-41a7-46c5-8ffa-8f1e20b76e0f"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number:153\n",
+            "153 is an Armstrong number .\n"
           ]
         }
       ]
