--- a/140_basic_code.ipynb
+++ b/140_basic_code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNOA+eom4juf6YrQIL+6Ti4",
+      "authorship_tag": "ABX9TyNFL3gORTSSj1RhXwKO8f6E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -913,7 +913,7 @@
         "id": "dHD-FK0OGel0",
         "outputId": "c0161197-41a7-46c5-8ffa-8f1e20b76e0f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -921,6 +921,55 @@
           "text": [
             "Enter a number:153\n",
             "153 is an Armstrong number .\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "20. Write a Python Program to find Armstrong Number in an interval"
+      ],
+      "metadata": {
+        "id": "djFYGrzOjcZK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lower = int(input(\"Enter the lower limit of the interval: \"))\n",
+        "upper = int(input(\"ENter the upper limit of the interval: \"))\n",
+        "\n",
+        "for num in range (lower, upper+1):\n",
+        "  order = len(str(num))\n",
+        "  temp_num=num\n",
+        "  sum=0\n",
+        "\n",
+        "  while temp_num >0:\n",
+        "    digit =temp_num %10\n",
+        "    sum+= digit**order\n",
+        "    temp_num //=10\n",
+        "\n",
+        "    if num == sum:\n",
+        "      print(num)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "F3T2jBk7l2HO",
+        "outputId": "6e4db328-a582-41c9-be9e-a043a943c88b"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the lower limit of the interval: 100\n",
+            "ENter the upper limit of the interval: 200\n",
+            "125\n",
+            "153\n"
           ]
         }
       ]
