--- a/140_basic_code.ipynb
+++ b/140_basic_code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNFL3gORTSSj1RhXwKO8f6E",
+      "authorship_tag": "ABX9TyPmL00W8nnl4onl5Uoa63B5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -960,7 +960,7 @@
         "id": "F3T2jBk7l2HO",
         "outputId": "6e4db328-a582-41c9-be9e-a043a943c88b"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -970,6 +970,57 @@
             "ENter the upper limit of the interval: 200\n",
             "125\n",
             "153\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "21. Write a python program to find the sum of natural numbers.\n",
+        "\n",
+        "Natural numbers are a set of positive integers that are used to count and order objects.\n",
+        "They are the numbers that typically start from 1 and continue indefinitely, including all the\n",
+        "whole numbers greater than 0. In mathematical notation, the set of natural numbers is often\n",
+        "denoted as \"N\" and can be expressed as:\n",
+        "𝑁 = 1, 2, 3, 4, 5, 6, 7, 8, . . .\n",
+        "\n",
+        "\n",
+        "𝑁 = 1, 2, 3, 4, 5, 6, 7, 8, . . .\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "zXdlUorE_guQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "limit = int(input(\"Enter the limit: \"))\n",
+        "\n",
+        "sum=0\n",
+        "\n",
+        "for i in range(1,limit+1):\n",
+        "  sum+=i\n",
+        "\n",
+        "print(\"the sum of nature numbers upto \",limit,\"is:\",sum)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QgMX-CkW_yfx",
+        "outputId": "141a7266-b2ae-44d8-fa09-43cb760f048f"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the limit: 5\n",
+            "the sum of nature numbers upto  5 is: 15\n"
           ]
         }
       ]
