--- a/140_basic_code.ipynb
+++ b/140_basic_code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPmL00W8nnl4onl5Uoa63B5",
+      "authorship_tag": "ABX9TyP54uED7D8bL8EwfHZKsyNR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1013,7 +1013,7 @@
         "id": "QgMX-CkW_yfx",
         "outputId": "141a7266-b2ae-44d8-fa09-43cb760f048f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1021,6 +1021,66 @@
           "text": [
             "Enter the limit: 5\n",
             "the sum of nature numbers upto  5 is: 15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "22. Write a Python Program to Find LCM.\n",
+        "Least Common Multiple (LCM):\n",
+        "LCM, or Least Common Multiple, is the smallest multiple that is exactly divisible by two or\n",
+        "more numbers.\n",
+        "Formula:\n",
+        "For two numbers a and b, the LCM can be found using the formula:\n",
+        "For more than two numbers, you can find the LCM step by step, taking the LCM of pairs of\n",
+        "numbers at a time until you reach the last pair.\n",
+        "Note: GCD stands for Greatest Common Divisor.\n",
+        "LCM(𝑎, 𝑏) =\n",
+        "|𝑎 ⋅ 𝑏|\n",
+        "GCD(𝑎, 𝑏"
+      ],
+      "metadata": {
+        "id": "NCBKrl-0MHZm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def compute_Icm(x,y):\n",
+        "  if x>y:\n",
+        "    greater =x\n",
+        "  else:\n",
+        "    greater =y\n",
+        "  while(True):\n",
+        "    if((greater % x==0) and (greater %y ==0)):\n",
+        "      lcm = greater\n",
+        "      break\n",
+        "    greater +=1\n",
+        "  return lcm\n",
+        "\n",
+        "num1 =int(input('Enter the number:'))\n",
+        "num2 =int(input('Enter the 2nd number:'))\n",
+        "\n",
+        "print(\"the LCM is \",compute_Icm(num1,num2))"
+      ],
+      "metadata": {
+        "id": "-Mb-xEDxMWEf",
+        "outputId": "10d68e0b-500d-4f67-edcc-c488e1e109b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number:54\n",
+            "Enter the 2nd number:24\n",
+            "the LCM is  216\n"
           ]
         }
       ]
