--- a/140_basic_code.ipynb
+++ b/140_basic_code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP54uED7D8bL8EwfHZKsyNR",
+      "authorship_tag": "ABX9TyOI6QO4BVYvIU8O+FSXNV6c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1028,21 +1028,29 @@
     {
       "cell_type": "markdown",
       "source": [
-        "22. Write a Python Program to Find LCM.\n",
-        "Least Common Multiple (LCM):\n",
+        "**22.Write a Python Program to Find LCM.**\n",
+        "\n",
+        "**Least Common Multiple(LCM):**\n",
+        "\n",
         "LCM, or Least Common Multiple, is the smallest multiple that is exactly divisible by two or\n",
         "more numbers.\n",
-        "Formula:\n",
+        "\n",
+        "\n",
+        "**Formula:**\n",
+        "\n",
+        "\n",
         "For two numbers a and b, the LCM can be found using the formula:\n",
+        "\n",
+        "LCM(𝑎, 𝑏) =\n",
+        "|𝑎 ⋅ 𝑏|  /\n",
+        "  GCD(𝑎, 𝑏)\n",
+        "\n",
         "For more than two numbers, you can find the LCM step by step, taking the LCM of pairs of\n",
         "numbers at a time until you reach the last pair.\n",
-        "Note: GCD stands for Greatest Common Divisor.\n",
-        "LCM(𝑎, 𝑏) =\n",
-        "|𝑎 ⋅ 𝑏|\n",
-        "GCD(𝑎, 𝑏"
+        "Note: GCD stands for Greatest Common Diviso\n"
       ],
       "metadata": {
-        "id": "NCBKrl-0MHZm"
+        "id": "-bURTTBxNdyL"
       }
     },
     {
@@ -1066,13 +1074,13 @@
         "print(\"the LCM is \",compute_Icm(num1,num2))"
       ],
       "metadata": {
-        "id": "-Mb-xEDxMWEf",
-        "outputId": "10d68e0b-500d-4f67-edcc-c488e1e109b1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "32uqnU7TOTVP",
+        "outputId": "e8446795-5e7e-400c-cb8e-f8d9c1e99a26"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
