--- a/140_basic_code.ipynb
+++ b/140_basic_code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOI6QO4BVYvIU8O+FSXNV6c",
+      "authorship_tag": "ABX9TyOU9bPm/bI96fj+eSGpByxJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1080,7 +1080,7 @@
         "id": "32uqnU7TOTVP",
         "outputId": "e8446795-5e7e-400c-cb8e-f8d9c1e99a26"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1089,6 +1089,68 @@
             "Enter the number:54\n",
             "Enter the 2nd number:24\n",
             "the LCM is  216\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "23. Write a python program to find HCF\n",
+        "\n",
+        "HCF or Highest Common Factor is the largest Positive integer that divides two or more numbers without leaving a remainder.\n",
+        "\n",
+        "Formula:\n",
+        "\n",
+        "For two numbers a and b, the HCF can be found using the formula:\n",
+        "\n",
+        "**`HCF(a,b)= GCD(a,b)`**\n",
+        "\n",
+        "\n",
+        "For more than two numbers, you can find the HCF by taking the GCD of pairs of numbers at\n",
+        "a time until you reach the last pair.\n",
+        "Note: GCD stands for Greatest Common Divisor.\n"
+      ],
+      "metadata": {
+        "id": "q5-h30D82Zbw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def compute_hcf(x,y):\n",
+        "  if x>y:\n",
+        "    smaller =y\n",
+        "  else:\n",
+        "    smaller =x\n",
+        "  for i in range(1,smaller+1):\n",
+        "    if((x%i==0)and (y%i==0)):\n",
+        "      hcf =i\n",
+        "  return hcf\n",
+        "\n",
+        "\n",
+        "num1 =int(input('Enter the number:  '))\n",
+        "num2=int(input('Enter the number :  '))\n",
+        "\n",
+        "\n",
+        "print(\"The H.C.F is \", compute_hcf(num1,num2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lJE63CpG26zi",
+        "outputId": "32ec9f4d-2ac4-404b-f6b3-ff061f88f938"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number:  54\n",
+            "Enter the number :  24\n",
+            "The H.C.F is  6\n"
           ]
         }
       ]
