--- a/140_basic_code.ipynb
+++ b/140_basic_code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOU9bPm/bI96fj+eSGpByxJ",
+      "authorship_tag": "ABX9TyMeQfYnHsMSS2hD24Yz3YdH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1142,7 +1142,7 @@
         "id": "lJE63CpG26zi",
         "outputId": "32ec9f4d-2ac4-404b-f6b3-ff061f88f938"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1151,6 +1151,277 @@
             "Enter the number:  54\n",
             "Enter the number :  24\n",
             "The H.C.F is  6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "24. Write a python progrsm to convert Decimal to Binary , Octal and Hexadecimal.\n",
+        "\n",
+        "Converting a decimal number to binary, octal, and hexadecimal involves dividing the\n",
+        "decimal number by the base repeatedly and noting the remainders at each step. Here's a\n",
+        "simple example:\n",
+        "Let's convert the decimal number 27 to binary, octal, and hexadecimal.\n",
+        "\n",
+        "1. Binary:\n",
+        "Divide 27 by 2. Quotient is 13, remainder is 1. Note the remainder.\n",
+        "Divide 13 by 2. Quotient is 6, remainder is 1. Note the remainder.\n",
+        "Divide 6 by 2. Quotient is 3, remainder is 0. Note the remainder.\n",
+        "Divide 3 by 2. Quotient is 1, remainder is 1. Note the remainder.\n",
+        "Divide 1 by 2. Quotient is 0, remainder is 1. Note the remainder.\n",
+        "Reading the remainders from bottom to top, the binary representation of 27 is 11011.\n",
+        "\n",
+        "\n",
+        "2. Octal:\n",
+        "\n",
+        "Divide 27 by 8. Quotient is 3, remainder is 3. Note the remainder.\n",
+        "Divide 3 by 8. Quotient is 0, remainder is 3. Note the remainder.\n",
+        "Reading the remainders from bottom to top, the octal representation of 27 is 33.\n",
+        "\n",
+        "\n",
+        "3. Hexadecimal:\n",
+        "\n",
+        "Divide 27 by 16. Quotient is 1, remainder is 11 (B in hexadecimal). Note the\n",
+        "remainder.\n",
+        "Reading the remainders, the hexadecimal representation of 27 is 1B.\n",
+        "So, in summary:\n",
+        "Binary: 27 in decimal is 11011 in binary.\n",
+        "Octal: 27 in decimal is 33 in octal.\n",
+        "Hexadecimal: 27 in decimal is 1B in hexadecimal\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "lXP_jpBVIAHt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dec_num = int(input(\"Enter a decimal number:\"))\n",
+        "\n",
+        "print(\"the Decimal value of\",dec_num,\"is :\")\n",
+        "print(bin(dec_num),\"in binary.\")\n",
+        "print(oct(dec_num),\"in octal...\")\n",
+        "print(hex(dec_num),\"in hexadecimal..\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ri2-UrIrdzKb",
+        "outputId": "0e3c8870-615a-428e-ca2f-3fabab6141e8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a decimal number:2\n",
+            "the Decimal value of 2 is :\n",
+            "0b10 in binary.\n",
+            "0o2 in octal...\n",
+            "0x2 in hexadecimal..\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "25. Write a python program to find ASCII value of a character\n",
+        "\n",
+        "ASCII value:\n",
+        "\n",
+        "ASCII, or American Standard Code for Information Interchange, is a character encoding\n",
+        "standard that uses numeric values to represent characters. Each ASCII character is\n",
+        "assigned a unique 7-bit or 8-bit binary number, allowing computers to exchange information\n",
+        "and display text in a consistent way. The ASCII values range from 0 to 127 (for 7-bit ASCII)\n",
+        "or 0 to 255 (for 8-bit ASCII), with each value corresponding to a specific character, such as\n",
+        "letters, digits, punctuation marks, and control characters.\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "0WIxUAYSQkLL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "char = str(input(\"Enter the character:\"))\n",
+        "print(\"The ASCII value of'\"+ char+\"'is\",ord(char))"
+      ],
+      "metadata": {
+        "id": "taPlZcmhfv2q",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ab4ecfac-dd32-43a7-8c5a-d558ca008eea"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the character:P\n",
+            "The ASCII value of'P'is 80\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "26. Write a python program to make a simple calculator with 4 basic mathematical operations."
+      ],
+      "metadata": {
+        "id": "ouRLEb8LRuuS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def add(x, y):\n",
+        "    return x + y\n",
+        "\n",
+        "def subtract(x, y):\n",
+        "    return x - y\n",
+        "\n",
+        "def multiply(x, y):\n",
+        "    return x * y\n",
+        "\n",
+        "def divide(x, y):\n",
+        "    return x / y\n",
+        "\n",
+        "print(\"Select operation:\\n 1. Add \\n 2. Subtract \\n 3. Multiply \\n 4. Divide\")\n",
+        "\n",
+        "while True:\n",
+        "    choice = input(\"Enter choice (1/2/3/4): \")\n",
+        "\n",
+        "    if choice in ('1', '2', '3', '4'):\n",
+        "        try:\n",
+        "            num1 = float(input(\"Enter first number: \"))\n",
+        "            num2 = float(input(\"Enter second number: \"))\n",
+        "        except ValueError:\n",
+        "            print(\"Invalid input. Please enter a number.\")\n",
+        "            continue\n",
+        "\n",
+        "        if choice == '1':\n",
+        "            print(num1, \"+\", num2, \"=\", add(num1, num2))\n",
+        "        elif choice == '2':\n",
+        "            print(num1, \"-\", num2, \"=\", subtract(num1, num2))\n",
+        "        elif choice == '3':\n",
+        "            print(num1, \"*\", num2, \"=\", multiply(num1, num2))\n",
+        "        elif choice == '4':\n",
+        "            if num2 != 0:\n",
+        "                print(num1, \"/\", num2, \"=\", divide(num1, num2))\n",
+        "            else:\n",
+        "                print(\"Cannot divide by zero.\")\n",
+        "                continue\n",
+        "\n",
+        "        next_calculation = input(\"Do you want to perform another calculation? (yes/no): \")\n",
+        "        if next_calculation.lower() == \"no\":\n",
+        "            break\n",
+        "    else:\n",
+        "        print(\"Invalid input. Please enter a valid choice (1/2/3/4).\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "u7CZ-TirSc0S",
+        "outputId": "0fd2d315-bd48-4006-a98b-45f649a7a2a7"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Select operation:\n",
+            " 1. Add \n",
+            " 2. Subtract \n",
+            " 3. Multiply \n",
+            " 4. Divide\n",
+            "Enter choice (1/2/3/4): 1\n",
+            "Enter first number: 5\n",
+            "Enter second number: 6\n",
+            "5.0 + 6.0 = 11.0\n",
+            "Do you want to perform another calculation? (yes/no): yes\n",
+            "Enter choice (1/2/3/4): 3\n",
+            "Enter first number: 5\n",
+            "Enter second number: 5\n",
+            "5.0 * 5.0 = 25.0\n",
+            "Do you want to perform another calculation? (yes/no): no\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "27. Write a Python Program to Display Fibonacci Sequence Using Recursion\n",
+        "\n",
+        "Fibonacci sequence:\n",
+        "The Fibonacci sequence is a series of numbers in which each number is the sum of the two\n",
+        "preceding ones, usually starting with 0 and 1. In mathematical terms, it is defined by the\n",
+        "recurrence relation ( F(n) = F(n-1) + F(n-2) ), with initial conditions ( F(0) = 0 ) and ( F(1) = 1\n",
+        "). The sequence begins: 0, 1, 1, 2, 3, 5, 8, 13, 21, and so on. The Fibonacci sequence has\n",
+        "widespread applications in mathematics, computer science, nature, and art.\n"
+      ],
+      "metadata": {
+        "id": "EiJhY_Hib25D"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Python program to display the Fibonacci sequence\n",
+        "def recur_fibo(n):\n",
+        " if n <= 1:\n",
+        "    return n\n",
+        " else:\n",
+        "    return(recur_fibo(n-1) + recur_fibo(n-2))\n",
+        "nterms = int(input(\"Enter the number of terms (greater than 0): \"))\n",
+        "# check if the number of terms is valid\n",
+        "if nterms <= 0:\n",
+        " print(\"Plese enter a positive integer\")\n",
+        "else:\n",
+        " print(\"Fibonacci sequence:\")\n",
+        " for i in range(nterms):\n",
+        "      print(recur_fibo(i))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZrKWQZbnaytr",
+        "outputId": "1dc5ec28-8b54-4545-f445-504b7e262525"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number of terms (greater than 0): 8\n",
+            "Fibonacci sequence:\n",
+            "0\n",
+            "1\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n",
+            "8\n",
+            "13\n"
           ]
         }
       ]
