--- a/140_basic_code.ipynb
+++ b/140_basic_code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMeQfYnHsMSS2hD24Yz3YdH",
+      "authorship_tag": "ABX9TyPUbHoIUko3PhsdEYC9Enx0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1265,7 +1265,7 @@
         },
         "outputId": "ab4ecfac-dd32-43a7-8c5a-d558ca008eea"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1340,7 +1340,7 @@
         "id": "u7CZ-TirSc0S",
         "outputId": "0fd2d315-bd48-4006-a98b-45f649a7a2a7"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -1406,7 +1406,7 @@
         "id": "ZrKWQZbnaytr",
         "outputId": "1dc5ec28-8b54-4545-f445-504b7e262525"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1425,6 +1425,183 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "28. Write a Python Program to Find Factorial of Number Using Recursion.\n",
+        "The factorial of a non-negative integer ( n ) is the product of all positive integers less than or\n",
+        "equal to ( n ). It is denoted by ( n! ) and is defined as:\n",
+        "\n",
+        "𝑛! = 𝑛 × (𝑛 − 1) × (𝑛 − 2) × … × 3 × 2 × 1\n",
+        "\n",
+        "For example:\n",
+        "\n",
+        "*   5! = 5X4X3x2x1 =120\n",
+        "*   0! is defined to be 1.\n",
+        "\n",
+        "Factorials are commonly used in mathematics, especially in combinatories and probablity,to count the number of ways a set of elements can be arranged or selected.\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "6XDWbNwBhSGO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def recur_factorial(n):\n",
+        "  if n ==1:\n",
+        "    return n\n",
+        "  else:\n",
+        "    return n*recur_factorial(n-1)\n",
+        "\n",
+        "num = int(input(\"Enter the number: \"))\n",
+        "\n",
+        "\n",
+        "if num < 0:\n",
+        "  print(\"Sorry, factorial does not exist for negative numbers\")\n",
+        "elif num ==0:\n",
+        "  print(\"The Factorial of 0 is 1\")\n",
+        "else:\n",
+        "  print(\"The factorial of \" ,num,\"is\",recur_factorial(num))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Hr9SlBfNhQoo",
+        "outputId": "4d6b49f9-dd90-473e-b5e6-66dda075a6d3"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number: 8\n",
+            "The factorial of  8 is 40320\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "29. Write a Python Program to calculate your Body Mass Index.\n",
+        "Body Mass Index (BMI) is a measure of body fat based on an individual's weight and\n",
+        "height. It is commonly used as a screening tool to categorize individuals into different weight\n",
+        "status categories, such as underweight, normal weight, overweight, and obesity.\n",
+        "The BMI is calculated using the following formula:\n",
+        "\n",
+        "BMI =  Weight(kg) / Height(m)^2\n",
+        "\n",
+        "Alternatively, in the imperial system:\n",
+        "\n",
+        "BMI =  (Weight(Ib) / Height (in)^2) X 703\n",
+        "\n",
+        "BMI provides a general indication of body fatness but does not directly measure body fat or\n",
+        "distribution. It is widely used in public health and clinical settings as a quick and simple tool\n",
+        "to assess potential health risks associated with weight. Different BMI ranges are associated\n",
+        "with different health categories, but it's important to note that BMI has limitations and does\n",
+        "not account for factors such as muscle mass or distribution of fat.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "JZctC6c7l-yH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def bodymassindex(height, weight):\n",
+        " return round((weight / height**2),2)\n",
+        "\n",
+        "h = float(input(\"Enter your height in meters: \"))\n",
+        "w = float(input(\"Enter your weight in kg: \"))\n",
+        "\n",
+        "print(\"Welcome to the BMI calculator.\")\n",
+        "bmi = bodymassindex(h, w)\n",
+        "print(\"Your BMI is: \", bmi)\n",
+        "\n",
+        "\n",
+        "if bmi <= 18.5:\n",
+        "   print(\"You are underweight.\")\n",
+        "elif 18.5 < bmi <= 24.9:\n",
+        "    print(\"Your weight is normal.\")\n",
+        "elif 25 < bmi <= 29.29:\n",
+        "    print(\"You are overweight.\")\n",
+        "else:\n",
+        "      print(\"You are obese.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VcIyTzdlnZ3A",
+        "outputId": "f8f9febd-9c3d-4e66-c031-351c49305804"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter your height in meters: 25\n",
+            "Enter your weight in kg: 90\n",
+            "Welcome to the BMI calculator.\n",
+            "Your BMI is:  0.14\n",
+            "You are underweight.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "30 . Write a Python Program to calculate the natural logarithm of any number.\n",
+        "The natural logarithm, often denoted as , is a mathematical function that represents the\n",
+        "logarithm to the base , where is the mathematical constant approximately equal to\n",
+        ". In other words, for a positive number , the natural logarithm of is the exponent\n",
+        " that satisfies the equation .\n",
+        "Mathematically, the natural logarithm is expressed as:\n",
+        "It is commonly used in various branches of mathematics, especially in calculus and\n",
+        "mathematical analysis, as well as in fields such as physics, economics, and engineering.\n",
+        "The natural logarithm has properties that make it particularly useful in situations involving\n",
+        "exponential growth or decay.\n",
+        "𝑙𝑛\n",
+        "𝑒 𝑒\n",
+        "2.71828 𝑥 𝑥\n",
+        "𝑦 𝑒 = 𝑥\n",
+        "𝑦\n",
+        "ln(𝑥)"
+      ],
+      "metadata": {
+        "id": "HufxFDoF3m7c"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "num =float(input(\"Enter  a number: \"))\n",
+        "\n",
+        "\n",
+        "if num <=0:\n",
+        "  print(\"Please enter a positive number ..\")\n",
+        "else:\n",
+        "  # Calculate the natural logarithm (base e) of the number\n",
+        "  result=math.log(num)\n",
+        "  print(f\"The natural logarithm of {num} is: {result}\")"
+      ],
+      "metadata": {
+        "id": "ICFQf7c53th_"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
