--- a/140_basic_code.ipynb
+++ b/140_basic_code.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPUbHoIUko3PhsdEYC9Enx0",
+      "authorship_tag": "ABX9TyO5PG1Ce0VQ7G1Ve1XQL8cw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1602,6 +1602,51 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "31.  Write a python program for cube sum of first n natural numbers?"
+      ],
+      "metadata": {
+        "id": "B3P4NUHbRl9f"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def cube_sum_of_natural_numbers(n):\n",
+        " if n <= 0:\n",
+        "  return 0\n",
+        " else:\n",
+        "   total = sum([i**3 for i in range(1, n + 1)])\n",
+        " return total\n",
+        "# Input the number of natural numbers\n",
+        "n = int(input(\"Enter the value of n: \"))\n",
+        "if n <= 0:\n",
+        " print(\"Please enter a positive integer.\")\n",
+        "else:\n",
+        " result = cube_sum_of_natural_numbers(n)\n",
+        " print(f\"The cube sum of the first {n} natural numbers is: {result}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XaddBcAtRmnY",
+        "outputId": "118811f1-04ce-44d4-c498-b4ece7070870"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the value of n: 7\n",
+            "The cube sum of the first 7 natural numbers is: 784\n"
+          ]
+        }
+      ]
     }
   ]
 }
